Anthony/Stephen fixing spacing on dashboard tables

--- a/src/sass/modules/tables.scss
+++ b/src/sass/modules/tables.scss
@@ -47,6 +47,10 @@
             text-align: right;
             padding-right: 20px;
 
+            .button-inverted {
+                margin: 0 0px 30px 0;
+            }
+
             button {
                 margin: 0;
                 display: inline-block;
@@ -332,8 +336,12 @@
             display: table-cell; 
             vertical-align: middle; 
             text-align: right; 
-
             margin-left: auto; 
+
+
+            .button-inverted {
+                margin: 0 0px 30px 0;
+            }
 
             button { 
                 margin: 0; 
